@@ -38,6 +38,8 @@
 <p>2018-01-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/pixel_cache.c (InterpolateColor): Return black pixel if
+InterpolateViewColor() reports failure.</li>
 <li>coders/png.c (ReadMNGImage): Fix memory leak of chunk and
 mng_info in error path.</li>
 <li>coders/gif.c (ReadGIFImage): Fix memory leak of global colormap.</li>
