@@ -1,5 +1,8 @@
 2018-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/pixel_cache.c (InterpolateColor): Return black pixel if
+	InterpolateViewColor() reports failure.
+
 	* coders/png.c (ReadMNGImage): Fix memory leak of chunk and
 	mng_info in error path.
 
